--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,12 @@
             android:name=".view.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.AdmActivity"></activity>
+        <activity android:name=".view.AdmActivity" />
         <activity android:name=".view.Calc2Activity" />
         <activity android:name=".view.CadastroTurmasActivity" />
         <activity android:name=".view.AlunosActivity" />
-        <activity android:name=".NotasActivity"></activity>
+        <activity android:name=".view.NotasActivity" />
+        <activity android:name=".view.CalendarioActivity"></activity>
     </application>
 
 </manifest>
